# 3d-Printer

./: README.md  adapted_yolov6_3d_speednet.py  calibration.py  checkpoint_fix.py  complete_setup_guide.md  dataset_analyzer.py  demo.py  deployment_guide.md  emergency_gpu_speednet.py  emergency_gpu_speednet_fixed.py  emergency_gpu_test.py  enhanced_augmentation_speednet.py  environment.yml  gpu_diagnostic.py  gpu_force_fix.py  gpu_overfitting_speednet.py  gpu_overfitting_speednet_checkpointed.py  gpu_overfitting_speednet_checkpointed_fixed.py  inference_pipeline.py  kaggle_advanced_speednet.py  kaggle_advanced_speednet_fixed.py  kaggle_balanced_speednet.py  kaggle_gpu_optimized_speednet.py  kaggle_reset_safe_speednet.py  kaggle_training_notebook.py  quick_start_guide.md  quick_test_script.py  realworld_speednet.py  repository_diagnostic.py  requirements.txt  scaling_solutions_comparison.py  setup.py  setup_and_run_guide.md  setup_training.py  tracknet_inspired_speednet.py  train_speednet.py  universal_speednet.py  universal_speednet_fixed.py  universal_speednet_proper_attention.py  yolov6_2d_motion.py  (+4 more)
models/: __init__.py  speednet.py
speedcam/: README.md  requirements.txt  setup.cfg
speedcam/speedcam/: __init__.py  calibration.py  geometry.py  run.py  speed.py  tracking.py  viz.py
speedcam_mobile/: README.md  requirements.txt
speedcam_mobile/speedcam_mobile/: __init__.py  detection.py  geometry.py  run.py  tracking.py  ttc.py  vio.py  viz.py
speedcam_pro/: README.md  requirements.txt
speedcam_pro/speedcam_pro/: __init__.py  (+10 more)
vehicle_speed_kit/: README.md
(+8 files in other folders)
