[metadata]
name = speedcam
version = 0.1.0
description = Fixed-camera monocular speed estimation
license = MIT

[options]
packages = find:
install_requires =
	-ultralytics==8.3.56
	-opencv-python>=4.9.0
	-numpy>=1.25
	-scipy>=1.11
	-scikit-image>=0.21
	-filterpy>=1.4.5
	-tqdm>=4.66
	-pydantic>=2.7
	-matplotlib>=3.8

[options.entry_points]
console_scripts =
	speedcam = speedcam.run:main